fix: z-index to slick-arrows

--- a/scss/_slick.scss
+++ b/scss/_slick.scss
@@ -132,6 +132,7 @@
     line-height: 0;
 
     position: absolute;
+    z-index: $zindex-slick;
     top: 50%;
 
     display: block;
